[gd_scene load_steps=7 format=2]

[ext_resource path="res://stages/Forest/ground only.jpg" type="Texture" id=1]
[ext_resource path="res://stages/Forest/tree.png" type="Texture" id=2]
[ext_resource path="res://stages/ScreenShake.tscn" type="PackedScene" id=3]
[ext_resource path="res://stages/screen_shake.gd" type="Script" id=4]


[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0, 0.196078, 0.392157, 1 )
draw_center = true
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 0 )
border_blend = false
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Corner Radius", "Expand Margin" ]

[sub_resource type="StyleBoxFlat" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0, 0.392157, 0.196078, 1 )
draw_center = true
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 1, 1, 1, 0 )
border_blend = false
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1
_sections_unfolded = [ "Border", "Border Width", "Corner Radius", "Expand Margin" ]

[node name="ScreenShakeTest" type="Node2D"]

[node name="BG" type="Sprite" parent="." index="0"]

texture = ExtResource( 1 )
_sections_unfolded = [ "Offset" ]

[node name="Tree" type="Sprite" parent="." index="1"]

position = Vector2( -155.361, -102.395 )
texture = ExtResource( 2 )

[node name="HelpHUD" type="CanvasLayer" parent="." index="2"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
_sections_unfolded = [ "Rect" ]

[node name="VBox" type="VBoxContainer" parent="HelpHUD" index="0"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -462.0
margin_top = -130.0
margin_right = 462.0
margin_bottom = -50.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 16
alignment = 0
_sections_unfolded = [ "Rect", "custom_constants" ]

[node name="ShakeBar" type="ProgressBar" parent="HelpHUD/VBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 924.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_styles/fg = SubResource( 1 )
min_value = 0.0
max_value = 1.0
step = 0.001
page = 0.0
value = 0.5
exp_edit = false
rounded = false
percent_visible = false
_sections_unfolded = [ "Percent", "Rect", "custom_colors", "custom_styles" ]

[node name="FactorBar" type="ProgressBar" parent="HelpHUD/VBox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 48.0
margin_right = 924.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 32 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_styles/fg = SubResource( 2 )
min_value = 0.0
max_value = 1.0
step = 0.001
page = 0.0
value = 0.5
exp_edit = false
rounded = false
percent_visible = false
_sections_unfolded = [ "Percent", "Rect", "custom_styles" ]

[node name="ScreenShake" type="Position2D" parent="." index="3" instance=ExtResource( 3 )]

script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]


